--- a/NEC_data_cleaning.ipynb
+++ b/NEC_data_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMf3ZepTTOAjRriY+k9ujhH",
+      "authorship_tag": "ABX9TyP+O+p/Yo3j+SOGBDvbH13h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -624,6 +624,42 @@
           "name": "stdout",
           "text": [
             "There are 0 rows with duplicated TEST ID values.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Checking to see how many missing cells in the CLIENT CITY column"
+      ],
+      "metadata": {
+        "id": "quVa5ZyrvT2V"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_csv('https://raw.githubusercontent.com/ShanChartrand/NECDataCleaning/main/necoriginal.csv')\n",
+        "\n",
+        "missing_cells = df['CLIENT CITY'].isnull().sum()\n",
+        "\n",
+        "print(missing_cells)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cqIyCwH4vKgX",
+        "outputId": "177070b0-dc45-48cb-c115-68e6405c2ea5"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "55\n"
           ]
         }
       ]
