--- a/NEC_data_cleaning.ipynb
+++ b/NEC_data_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+O+p/Yo3j+SOGBDvbH13h",
+      "authorship_tag": "ABX9TyN6xVOmvJmNYhCEuVqk27zE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -660,6 +660,93 @@
           "name": "stdout",
           "text": [
             "55\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from geopy.geocoders import Nominatim\n",
+        "\n",
+        "# Load the CSV file into a Pandas DataFrame\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/ShanChartrand/NECDataCleaning/main/necoriginal.csv')\n",
+        "\n",
+        "# Create a geolocator object\n",
+        "geolocator = Nominatim(user_agent=\"my-app\")\n",
+        "\n",
+        "# Define a function to perform reverse geocoding and return the city name\n",
+        "def reverse_geocode(lat, lon):\n",
+        "    location = geolocator.reverse(f\"{lat}, {lon}\")\n",
+        "    return location.raw['address']['city'] if 'city' in location.raw['address'] else None\n",
+        "\n",
+        "# Fill in missing CLIENT CITY values using reverse geocoding\n",
+        "df['CLIENT CITY'] = df.apply(lambda row: reverse_geocode(row['GEO LATITUDE'], row['GEO LONGITUDE']) if pd.isnull(row['CLIENT CITY']) else row['CLIENT CITY'], axis=1)\n",
+        "\n",
+        "# Save the updated DataFrame to a new CSV file\n",
+        "df.to_csv('https://raw.githubusercontent.com/ShanChartrand/NECDataCleaning/main/necoriginal.csv', index=False)\n",
+        "\n",
+        "#Confirming there are no missing values\n",
+        "\n",
+        "missing_cells = df['CLIENT CITY'].isnull().sum()\n",
+        "\n",
+        "print(missing_cells)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UJ8bK_xhwaIx",
+        "outputId": "0e7e333f-5fe9-49ad-8412-e77f35bca279"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Looking for duplicate rows"
+      ],
+      "metadata": {
+        "id": "CTa358_gyxKg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Find duplicate rows based on all columns\n",
+        "duplicates = df[df.duplicated()]\n",
+        "\n",
+        "# Display the duplicate rows (if any)\n",
+        "if len(duplicates) > 0:\n",
+        "    print(f\"Found {len(duplicates)} duplicate rows:\")\n",
+        "    print(duplicates)\n",
+        "else:\n",
+        "    print(\"No duplicate rows found.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RBy34o8zyrO9",
+        "outputId": "cbc0e72d-c3e7-41a3-f9dd-42f238bd77e3"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "No duplicate rows found.\n"
           ]
         }
       ]
