--- a/NEC_data_cleaning.ipynb
+++ b/NEC_data_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6xVOmvJmNYhCEuVqk27zE",
+      "authorship_tag": "ABX9TyPnc0j505ZRt2t6G3Y8CwjJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -750,6 +750,82 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Confirming again that CLIENT CITY has no missing values"
+      ],
+      "metadata": {
+        "id": "NdWEiojB0HU6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate the percentage of missing cells in each column\n",
+        "missing_percentages = df.isna().sum() / len(df) * 100\n",
+        "\n",
+        "# Print the result\n",
+        "print(missing_percentages)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gB53sbk60AiN",
+        "outputId": "e8874227-d52a-4244-c1e1-7722036f4198"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "TEST ID                       0.000000\n",
+            "TEST DATE / UTC HOUR          0.000000\n",
+            "GEO LATITUDE                  0.000000\n",
+            "GEO LONGITUDE                 0.000000\n",
+            "DOWNLOAD SPEED                0.000000\n",
+            "UPLOAD SPEED                  0.000000\n",
+            "JITTER                       40.395424\n",
+            "LATENCY                      40.395424\n",
+            "PACKET LOSS                  40.395424\n",
+            "MOBILE TEST                   0.000000\n",
+            "ISP                           0.005018\n",
+            "CLIENT IP                     0.000000\n",
+            "CLIENT CITY                   0.000000\n",
+            "CLIENT PROVINCE               0.391409\n",
+            "CLIENT POSTAL CODE            0.130470\n",
+            "AS NUMBER                     0.105379\n",
+            "IPV6 SUPPORTED                0.000000\n",
+            "DNSSEC SUPPORTED              0.000000\n",
+            "TEST SERVER                   0.000000\n",
+            "browser_test_url             34.704938\n",
+            "CONTRACTED DOWNLOAD SPEED    81.413087\n",
+            "CONTRACTED UPLOAD SPEED      88.237656\n",
+            "CONTRACTED DATA CAP          92.377559\n",
+            "CONTRACTED MONTHLY COST      83.611000\n",
+            "SERVICE TYPE                 78.577880\n",
+            "USER SATISFACTION            83.470494\n",
+            "CONNECTION TYPE              92.352469\n",
+            "USER COMMENTS                75.165596\n",
+            "HEATMAP_MUNICIPALITY          0.000000\n",
+            "HEATMAP_CENSUS_TRACTS         0.000000\n",
+            "HEATMAP_PROJECT_AREA         94.831393\n",
+            "dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZRM2pEBOzwb2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
