--- a/NEC_data_cleaning.ipynb
+++ b/NEC_data_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnc0j505ZRt2t6G3Y8CwjJ",
+      "authorship_tag": "ABX9TyNgdRSrf6CkBen4zJ6clNhF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4d2va8Sp-3Z3",
-        "outputId": "f0ca7505-0793-4702-8cce-ae286370edda"
+        "outputId": "ac5bfec8-5b8d-47d4-abf6-8b76624b4a87"
       },
       "outputs": [
         {
@@ -43,9 +43,9 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (1.5.3)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2022.7.1)\n",
             "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
             "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.10/dist-packages (from pandas) (1.22.4)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2022.7.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
           ]
         }
@@ -82,9 +82,9 @@
           "height": 855
         },
         "id": "gqfqZuH2C4XL",
-        "outputId": "cb0c58f5-d299-41bf-d418-f98e899bcfce"
+        "outputId": "d75aa525-0eef-426d-9c7b-e38553247491"
       },
-      "execution_count": 22,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "display_data",
@@ -154,7 +154,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a44ffa74-caa0-4067-991f-cf9b47a2ba78\">\n",
+              "  <div id=\"df-30dd62a8-159d-4f61-b2a3-ff376ab27954\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -442,7 +442,7 @@
               "</table>\n",
               "<p>10 rows × 31 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a44ffa74-caa0-4067-991f-cf9b47a2ba78')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-30dd62a8-159d-4f61-b2a3-ff376ab27954')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -493,12 +493,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a44ffa74-caa0-4067-991f-cf9b47a2ba78 button.colab-df-convert');\n",
+              "          document.querySelector('#df-30dd62a8-159d-4f61-b2a3-ff376ab27954 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a44ffa74-caa0-4067-991f-cf9b47a2ba78');\n",
+              "          const element = document.querySelector('#df-30dd62a8-159d-4f61-b2a3-ff376ab27954');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -543,9 +543,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HgbG3QnzDlNB",
-        "outputId": "2080e530-b05f-439f-ee45-0789c0de8237"
+        "outputId": "888c7d05-da44-42ca-eb56-8c3609e00376"
       },
-      "execution_count": 23,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,7 +555,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 41
         }
       ]
     },
@@ -579,9 +579,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zmBTM-7rZjzK",
-        "outputId": "cdb04561-a896-4994-f657-e140827c1cf3"
+        "outputId": "0303164e-008b-4933-8f0d-174f3510a79e"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,15 +615,55 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ez24zJwZgaaP",
-        "outputId": "1106f5fa-6710-4a24-e6e3-9aa09e19e26c"
+        "outputId": "01e867f9-acc4-4ada-c2b1-6848cd291d28"
       },
-      "execution_count": 24,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "There are 0 rows with duplicated TEST ID values.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Looking for duplicate rows"
+      ],
+      "metadata": {
+        "id": "CTa358_gyxKg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Find duplicate rows based on all columns\n",
+        "duplicates = df[df.duplicated()]\n",
+        "\n",
+        "# Display the duplicate rows (if any)\n",
+        "if len(duplicates) > 0:\n",
+        "    print(f\"Found {len(duplicates)} duplicate rows:\")\n",
+        "    print(duplicates)\n",
+        "else:\n",
+        "    print(\"No duplicate rows found.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RBy34o8zyrO9",
+        "outputId": "2a246cf4-e524-4aaf-f572-6bcefea1bf13"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "No duplicate rows found.\n"
           ]
         }
       ]
@@ -651,9 +691,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cqIyCwH4vKgX",
-        "outputId": "177070b0-dc45-48cb-c115-68e6405c2ea5"
+        "outputId": "18d3538e-db08-47f8-fff2-0beef511f1fd"
       },
-      "execution_count": 25,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -698,9 +738,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UJ8bK_xhwaIx",
-        "outputId": "0e7e333f-5fe9-49ad-8412-e77f35bca279"
+        "outputId": "a52ccc39-af6f-4cdd-cb12-8f7e2ff1cccb"
       },
-      "execution_count": 29,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -714,47 +754,30 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Looking for duplicate rows"
+        "Using CLIENT CITY to fill in missing CLIENT PROVINCE values"
       ],
       "metadata": {
-        "id": "CTa358_gyxKg"
+        "id": "2DsbtWzA3Hhp"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "# Find duplicate rows based on all columns\n",
-        "duplicates = df[df.duplicated()]\n",
+        "df['CLIENT PROVINCE'].fillna(df['CLIENT CITY'].str.split(',').str[-1], inplace=True)\n",
         "\n",
-        "# Display the duplicate rows (if any)\n",
-        "if len(duplicates) > 0:\n",
-        "    print(f\"Found {len(duplicates)} duplicate rows:\")\n",
-        "    print(duplicates)\n",
-        "else:\n",
-        "    print(\"No duplicate rows found.\")"
+        "# Save the updated DataFrame to a new CSV file\n",
+        "df.to_csv('https://raw.githubusercontent.com/ShanChartrand/NECDataCleaning/main/necoriginal.csv', index=False)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RBy34o8zyrO9",
-        "outputId": "cbc0e72d-c3e7-41a3-f9dd-42f238bd77e3"
+        "id": "oEts5lEM2NIy"
       },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "No duplicate rows found.\n"
-          ]
-        }
-      ]
+      "execution_count": 47,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Confirming again that CLIENT CITY has no missing values"
+        "Confirming the CLIENT CITY & CLIENT PROVINCE have no missing values"
       ],
       "metadata": {
         "id": "NdWEiojB0HU6"
@@ -774,9 +797,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gB53sbk60AiN",
-        "outputId": "e8874227-d52a-4244-c1e1-7722036f4198"
+        "outputId": "b6d69b2e-1c41-4439-8c3b-33b4d856fab3"
       },
-      "execution_count": 34,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -795,7 +818,7 @@
             "ISP                           0.005018\n",
             "CLIENT IP                     0.000000\n",
             "CLIENT CITY                   0.000000\n",
-            "CLIENT PROVINCE               0.391409\n",
+            "CLIENT PROVINCE               0.000000\n",
             "CLIENT POSTAL CODE            0.130470\n",
             "AS NUMBER                     0.105379\n",
             "IPV6 SUPPORTED                0.000000\n",
@@ -817,15 +840,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ZRM2pEBOzwb2"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
