--- a/NEC_data_cleaning.ipynb
+++ b/NEC_data_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNgdRSrf6CkBen4zJ6clNhF",
+      "authorship_tag": "ABX9TyNi9DJRUpe/Hf7AC74fs6ei",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4d2va8Sp-3Z3",
-        "outputId": "ac5bfec8-5b8d-47d4-abf6-8b76624b4a87"
+        "outputId": "4622c529-1447-4670-c7bb-b0fa0db3c0af"
       },
       "outputs": [
         {
@@ -43,8 +43,8 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (1.5.3)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2022.7.1)\n",
             "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2022.7.1)\n",
             "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.10/dist-packages (from pandas) (1.22.4)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
           ]
@@ -82,9 +82,9 @@
           "height": 855
         },
         "id": "gqfqZuH2C4XL",
-        "outputId": "d75aa525-0eef-426d-9c7b-e38553247491"
+        "outputId": "b59b6336-43f8-4cab-95b8-49c47b69a5fb"
       },
-      "execution_count": 40,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -154,7 +154,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-30dd62a8-159d-4f61-b2a3-ff376ab27954\">\n",
+              "  <div id=\"df-ecff606f-5368-4f4d-8169-dfb6f9b3d230\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -442,7 +442,7 @@
               "</table>\n",
               "<p>10 rows × 31 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-30dd62a8-159d-4f61-b2a3-ff376ab27954')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ecff606f-5368-4f4d-8169-dfb6f9b3d230')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -493,12 +493,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-30dd62a8-159d-4f61-b2a3-ff376ab27954 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ecff606f-5368-4f4d-8169-dfb6f9b3d230 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-30dd62a8-159d-4f61-b2a3-ff376ab27954');\n",
+              "          const element = document.querySelector('#df-ecff606f-5368-4f4d-8169-dfb6f9b3d230');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -543,9 +543,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HgbG3QnzDlNB",
-        "outputId": "888c7d05-da44-42ca-eb56-8c3609e00376"
+        "outputId": "6822b57c-f43d-4244-9e57-4eb6d5d05821"
       },
-      "execution_count": 41,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,7 +555,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 25
         }
       ]
     },
@@ -579,9 +579,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zmBTM-7rZjzK",
-        "outputId": "0303164e-008b-4933-8f0d-174f3510a79e"
+        "outputId": "d0583608-b9bb-4500-c588-19840c82ddd3"
       },
-      "execution_count": 42,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,9 +615,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ez24zJwZgaaP",
-        "outputId": "01e867f9-acc4-4ada-c2b1-6848cd291d28"
+        "outputId": "3f226339-8e3e-4ca7-b528-667a75f9ea35"
       },
-      "execution_count": 43,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -655,9 +655,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RBy34o8zyrO9",
-        "outputId": "2a246cf4-e524-4aaf-f572-6bcefea1bf13"
+        "outputId": "44d995b2-a9a3-4fe1-ae7d-eb98050db6a9"
       },
-      "execution_count": 44,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,9 +691,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cqIyCwH4vKgX",
-        "outputId": "18d3538e-db08-47f8-fff2-0beef511f1fd"
+        "outputId": "28c95e76-d0ab-45fc-cac7-ce1c6c314d67"
       },
-      "execution_count": 45,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,6 +703,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Using Longitude and Latitude to fill in the missing CLIENT CITY cells"
+      ],
+      "metadata": {
+        "id": "7KoCbS-c8UVZ"
+      }
     },
     {
       "cell_type": "code",
@@ -728,7 +737,6 @@
         "df.to_csv('https://raw.githubusercontent.com/ShanChartrand/NECDataCleaning/main/necoriginal.csv', index=False)\n",
         "\n",
         "#Confirming there are no missing values\n",
-        "\n",
         "missing_cells = df['CLIENT CITY'].isnull().sum()\n",
         "\n",
         "print(missing_cells)\n"
@@ -738,9 +746,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UJ8bK_xhwaIx",
-        "outputId": "a52ccc39-af6f-4cdd-cb12-8f7e2ff1cccb"
+        "outputId": "6c6f27a3-1f02-4338-84a5-d0e69c3e44ca"
       },
-      "execution_count": 46,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -771,7 +779,7 @@
       "metadata": {
         "id": "oEts5lEM2NIy"
       },
-      "execution_count": 47,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -797,9 +805,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gB53sbk60AiN",
-        "outputId": "b6d69b2e-1c41-4439-8c3b-33b4d856fab3"
+        "outputId": "c52834ed-d1c4-4bcb-c1f9-0d3dfa84f75b"
       },
-      "execution_count": 48,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,6 +848,140 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install IPWhois"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gYKPzr0D5dMT",
+        "outputId": "87a7df80-03eb-4213-c995-a2e8241de26e"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: IPWhois in /usr/local/lib/python3.10/dist-packages (1.2.0)\n",
+            "Requirement already satisfied: dnspython<=2.0.0 in /usr/local/lib/python3.10/dist-packages (from IPWhois) (2.0.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from ipwhois import IPWhois"
+      ],
+      "metadata": {
+        "id": "l5f0Ruql59He"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Standardizing all CLIENT CITY names e.g. Winnipeg"
+      ],
+      "metadata": {
+        "id": "StR5Uh2BVa9I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Read the CSV file into a Pandas DataFrame\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/ShanChartrand/NECDataCleaning/main/necoriginal.csv')\n",
+        "\n",
+        "# Check for unique values in the CLIENT CITY column\n",
+        "cities = df['CLIENT CITY'].unique()\n",
+        "\n",
+        "# Print the unique values\n",
+        "print(cities)\n",
+        "\n",
+        "# Clean up the city names\n",
+        "df['CLIENT CITY'] = df['CLIENT CITY'].str.title()  # Capitalize the first letter of each word\n",
+        "df['CLIENT CITY'] = df['CLIENT CITY'].str.strip()  # Remove leading/trailing white spaces\n",
+        "\n",
+        "# Check for unique values again\n",
+        "cities_cleaned = df['CLIENT CITY'].unique()\n",
+        "\n",
+        "# Save the updated dataframe to a new CSV file\n",
+        "df.to_csv('https://raw.githubusercontent.com/ShanChartrand/NECDataCleaning/main/necoriginal.csv', index=False)\n",
+        "\n",
+        "# Print the unique cleaned values\n",
+        "print(cities_cleaned)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r4qXmPjTUld7",
+        "outputId": "cc480463-c121-4edb-bd17-86b6a7c83b82"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Winnipeg' nan 'Gimli' 'Sault Ste. Marie' 'Calgary' 'Moose Jaw' 'Winkler'\n",
+            " 'Ottawa' 'Greater Sudbury' 'North York' 'Edmonton' 'Vancouver' 'Guelph'\n",
+            " 'Winnipeg (Portage & Main)' 'Hamilton' 'Surrey' 'Notre Dame de Lourdes'\n",
+            " 'Winnipeg (Tuxedo Industrials)' 'Barrie' 'Woodstock'\n",
+            " 'Toronto (Etobicoke)' 'Creemore' 'Alliston' 'Calgary (Downtown)'\n",
+            " 'St. Catharines' 'Toronto' 'Selkirk' 'Oak Bay' 'London' 'Kitchener'\n",
+            " 'Wawanesa' 'Cambridge' 'Brantford' 'Nobleton' 'Beauharnois'\n",
+            " 'Portage la Prairie' 'Roland' 'Caledon' 'Waterloo' 'Concord'\n",
+            " 'Mississauga' 'Port Perry' 'Orangeville' 'Stony Mountain' 'Oakville'\n",
+            " 'Brampton' 'Montreal' 'Toronto (Old Toronto)' 'Winnipeg (Downtown)'\n",
+            " 'Angus' 'Thompson' 'Wabowden' 'Winnipeg (Sir John Franklin)'\n",
+            " 'Winnipeg (Earl Grey)' 'Winnipeg (Kildare - Redonda)' 'Miami'\n",
+            " 'Scarborough' 'Carman' 'Saint-Quentin' 'La Salle' 'Oakbank' 'Marathon'\n",
+            " 'Georgetown' 'Port Hope' 'Thorold' 'Old Toronto' 'Blackstock' 'Lindsay'\n",
+            " 'Charlemagne' 'Steinbach' 'Etobicoke' 'Brandon' 'Marchand' \"Baie-d'Urfe\"\n",
+            " 'Stonewall' 'Markdale' 'Hartland' 'Kenora' 'Dowling' 'Bradford' 'Dryden'\n",
+            " 'Regina' 'Thunder Bay' 'Sydney' 'Heritage Pointe' 'Cobourg' 'Cooks Creek'\n",
+            " 'Teulon' 'Headingley' 'Hague' 'Markham' 'Chestermere' 'Peterborough']\n",
+            "['Winnipeg' nan 'Gimli' 'Sault Ste. Marie' 'Calgary' 'Moose Jaw' 'Winkler'\n",
+            " 'Ottawa' 'Greater Sudbury' 'North York' 'Edmonton' 'Vancouver' 'Guelph'\n",
+            " 'Winnipeg (Portage & Main)' 'Hamilton' 'Surrey' 'Notre Dame De Lourdes'\n",
+            " 'Winnipeg (Tuxedo Industrials)' 'Barrie' 'Woodstock'\n",
+            " 'Toronto (Etobicoke)' 'Creemore' 'Alliston' 'Calgary (Downtown)'\n",
+            " 'St. Catharines' 'Toronto' 'Selkirk' 'Oak Bay' 'London' 'Kitchener'\n",
+            " 'Wawanesa' 'Cambridge' 'Brantford' 'Nobleton' 'Beauharnois'\n",
+            " 'Portage La Prairie' 'Roland' 'Caledon' 'Waterloo' 'Concord'\n",
+            " 'Mississauga' 'Port Perry' 'Orangeville' 'Stony Mountain' 'Oakville'\n",
+            " 'Brampton' 'Montreal' 'Toronto (Old Toronto)' 'Winnipeg (Downtown)'\n",
+            " 'Angus' 'Thompson' 'Wabowden' 'Winnipeg (Sir John Franklin)'\n",
+            " 'Winnipeg (Earl Grey)' 'Winnipeg (Kildare - Redonda)' 'Miami'\n",
+            " 'Scarborough' 'Carman' 'Saint-Quentin' 'La Salle' 'Oakbank' 'Marathon'\n",
+            " 'Georgetown' 'Port Hope' 'Thorold' 'Old Toronto' 'Blackstock' 'Lindsay'\n",
+            " 'Charlemagne' 'Steinbach' 'Etobicoke' 'Brandon' 'Marchand' \"Baie-D'Urfe\"\n",
+            " 'Stonewall' 'Markdale' 'Hartland' 'Kenora' 'Dowling' 'Bradford' 'Dryden'\n",
+            " 'Regina' 'Thunder Bay' 'Sydney' 'Heritage Pointe' 'Cobourg' 'Cooks Creek'\n",
+            " 'Teulon' 'Headingley' 'Hague' 'Markham' 'Chestermere' 'Peterborough']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Standardizing all CLIENT PROVINCE names e.g. MB"
+      ],
+      "metadata": {
+        "id": "N9xXgVjQVk9A"
+      }
     }
   ]
 }
