--- a/NEC_data_cleaning_May_24.ipynb
+++ b/NEC_data_cleaning_May_24.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNawKZdqEbjwUlKgDZ3oXrI",
+      "authorship_tag": "ABX9TyNpYFikNP4OqSTZipaM2pBI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4d2va8Sp-3Z3",
-        "outputId": "3df86236-0d2b-4afe-dd22-ab4cf2725d41"
+        "outputId": "cffedc4c-561d-42c8-cb2d-d2208cbaacfa"
       },
       "outputs": [
         {
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "yb7N0MYp-a8P"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -111,12 +111,12 @@
       ],
       "metadata": {
         "id": "9MFM6R7IAWQ1",
-        "outputId": "2918f5a8-a59e-4567-cfba-10bf3d3be21d",
+        "outputId": "d012741d-0ed4-4fd4-af3d-9cc99478130e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "Tv6iMA-h-dzN"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -177,12 +177,12 @@
       ],
       "metadata": {
         "id": "pFqF4As7AIfA",
-        "outputId": "df1aa2e9-076e-4dac-f5f9-57d595ff103e",
+        "outputId": "a97b07f6-a171-472e-fdbe-8ec7385e5337",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,12 +214,12 @@
       ],
       "metadata": {
         "id": "V_tb7hE1CMox",
-        "outputId": "bb927f47-ebc3-4243-86e9-fe8895eead2d",
+        "outputId": "005edbee-8d0e-4b36-d6de-f9234a4b95cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,12 +302,12 @@
       ],
       "metadata": {
         "id": "EyOhZspYCnxg",
-        "outputId": "0d787eb9-2972-489d-c0bb-f05ada520308",
+        "outputId": "74b6dfb2-316e-4568-cbd2-1e2b96bb75d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,9 +342,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ez24zJwZgaaP",
-        "outputId": "36cd0bb2-9cd8-4163-b881-f60e867e9d1c"
+        "outputId": "a203868c-805c-49fe-d8ec-f951626447f8"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -382,9 +382,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RBy34o8zyrO9",
-        "outputId": "8d5d2ad3-d236-4b5b-8b28-2df37fa023b5"
+        "outputId": "c01d855c-c267-46ba-f6a2-d4fe6cb587c7"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,12 +415,12 @@
       ],
       "metadata": {
         "id": "cef99s21E8rf",
-        "outputId": "07f1304c-6376-4858-8513-c3840d248205",
+        "outputId": "50c73973-21d7-4f84-faff-31f3b95125f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,12 +482,12 @@
       ],
       "metadata": {
         "id": "am8M2ZF-HlEC",
-        "outputId": "dd80a172-5603-4a14-93cb-6d8c770d6b0d",
+        "outputId": "681977a0-8a63-4dcd-8c3b-3ac6b7780ac6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -540,12 +540,12 @@
       ],
       "metadata": {
         "id": "vHKkpYtgIF_w",
-        "outputId": "1d3784dc-95e5-48ed-c81f-b52ea41eccc0",
+        "outputId": "a434982d-c8fb-4a31-b898-2060483c0f8a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,12 +573,12 @@
       ],
       "metadata": {
         "id": "nxVw-HsSrXEN",
-        "outputId": "10d137a8-ef09-422b-a0c5-ff28f07172e4",
+        "outputId": "cea52c1d-d4c3-4dd0-a8f1-582bee92d4b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -654,12 +654,12 @@
       ],
       "metadata": {
         "id": "MsazcHNhq1P9",
-        "outputId": "0828c1ca-d596-4a8c-ee7f-de34fb191582",
+        "outputId": "d672c0c6-8e81-4012-fa41-4758bfd97d9c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,12 +688,12 @@
       ],
       "metadata": {
         "id": "DPKvFW1_tCi6",
-        "outputId": "50a44646-b0c6-402c-d065-7178f485b89c",
+        "outputId": "02bb259b-18b8-493f-edcd-8ab3c53dc7eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -772,6 +772,94 @@
             "Tefincom S.A.\n",
             "Atlantic Metro Communications II, Inc.\n",
             "Taylor McCaffrey LLP\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Looking at for upload/download speeds of 0 mbps"
+      ],
+      "metadata": {
+        "id": "x6IcxkL10hYF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Count the number of cells equal to zero in the 'DOWNLOAD SPEED' column\n",
+        "download_speed_zeros = (df['DOWNLOAD SPEED'] == 0).sum()\n",
+        "\n",
+        "# Count the number of cells equal to zero in the 'UPLOAD SPEED' column\n",
+        "upload_speed_zeros = (df['UPLOAD SPEED'] == 0).sum()\n",
+        "\n",
+        "# Print the counts\n",
+        "print(\"Number of cells equal to zero in 'DOWNLOAD SPEED' column:\", download_speed_zeros)\n",
+        "print(\"Number of cells equal to zero in 'UPLOAD SPEED' column:\", upload_speed_zeros)"
+      ],
+      "metadata": {
+        "id": "pNhF4XYi1I7s",
+        "outputId": "4e17b5f3-7a0d-4387-b25d-fb88a6f0e89b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of cells equal to zero in 'DOWNLOAD SPEED' column: 0\n",
+            "Number of cells equal to zero in 'UPLOAD SPEED' column: 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I now need to remove the 5 rows that have upload speeds of 0, and then list how many cells = 0 to confirm removal was successful"
+      ],
+      "metadata": {
+        "id": "Hv_BFli01X6W"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Count the number of cells equal to zero in the 'UPLOAD SPEED' column before removal\n",
+        "upload_speed_zeros_before = (df['UPLOAD SPEED'] == 0).sum()\n",
+        "\n",
+        "# Remove rows where UPLOAD SPEED is equal to 0\n",
+        "df = df[df['UPLOAD SPEED'] != 0]\n",
+        "\n",
+        "# Count the number of cells equal to zero in the 'UPLOAD SPEED' column after removal\n",
+        "upload_speed_zeros_after = (df['UPLOAD SPEED'] == 0).sum()\n",
+        "\n",
+        "# Save the updated DataFrame \n",
+        "df.to_csv('https://raw.githubusercontent.com/ShanChartrand/NECDataCleaning/main/necoriginal.csv', index=False)\n",
+        "\n",
+        "# Print the count before and after removal\n",
+        "print(\"Number of cells equal to zero in 'UPLOAD SPEED' column before removal:\", upload_speed_zeros_before)\n",
+        "print(\"Number of cells equal to zero in 'UPLOAD SPEED' column after removal:\", upload_speed_zeros_after)"
+      ],
+      "metadata": {
+        "id": "JUvJTXSS13i8",
+        "outputId": "c0daa4d9-c93a-4d47-fd18-331967bdea26",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of cells equal to zero in 'UPLOAD SPEED' column before removal: 0\n",
+            "Number of cells equal to zero in 'UPLOAD SPEED' column after removal: 0\n"
           ]
         }
       ]
