--- a/NEC_data_cleaning.ipynb
+++ b/NEC_data_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpYFikNP4OqSTZipaM2pBI",
+      "authorship_tag": "ABX9TyMx9qN3KfTVjp2sL6+VU0I+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 108,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4d2va8Sp-3Z3",
-        "outputId": "9c557995-0db4-4a54-8c96-4e007a855601"
+        "outputId": "b42c842c-79d9-4a4e-a411-e3577784d346"
       },
       "outputs": [
         {
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "yb7N0MYp-a8P"
       },
-      "execution_count": 2,
+      "execution_count": 109,
       "outputs": []
     },
     {
@@ -111,12 +111,12 @@
       ],
       "metadata": {
         "id": "9MFM6R7IAWQ1",
-        "outputId": "794beba1-9b11-4249-a40f-55b9a671b957",
+        "outputId": "54b9b771-d17d-4f68-efa1-9b59e708680a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "Tv6iMA-h-dzN"
       },
-      "execution_count": 4,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -177,12 +177,12 @@
       ],
       "metadata": {
         "id": "pFqF4As7AIfA",
-        "outputId": "67327e56-3fc2-4306-d0f1-03b5b3b963c8",
+        "outputId": "577dd14d-1f82-41b0-acf7-08bf3682d816",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,12 +214,12 @@
       ],
       "metadata": {
         "id": "V_tb7hE1CMox",
-        "outputId": "601b64b3-e384-40af-b6b5-22ed7edf13e5",
+        "outputId": "812b96cd-e15f-49e9-9d8e-50b460bceffe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,12 +302,12 @@
       ],
       "metadata": {
         "id": "EyOhZspYCnxg",
-        "outputId": "26b3a2f7-805b-451d-f3db-83e1d5111899",
+        "outputId": "578d285d-21fc-4bff-daa3-eeec3e9a7d97",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,9 +342,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ez24zJwZgaaP",
-        "outputId": "24b00390-76e4-4c94-db48-707f6cfc8e10"
+        "outputId": "5a105365-d2f0-4c0c-ecc4-d7819f33f124"
       },
-      "execution_count": 8,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
@@ -382,9 +382,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RBy34o8zyrO9",
-        "outputId": "a2d784b9-5a0f-4adf-ae44-94947b570c5e"
+        "outputId": "956233fe-c663-4e55-e7ba-473b9e3489d3"
       },
-      "execution_count": 9,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,12 +415,12 @@
       ],
       "metadata": {
         "id": "cef99s21E8rf",
-        "outputId": "3a47580d-3fb1-4dfe-cafa-c921d3a0410e",
+        "outputId": "a5c5ee62-2cfe-481f-cc00-a3eb8c9a702e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,12 +482,12 @@
       ],
       "metadata": {
         "id": "am8M2ZF-HlEC",
-        "outputId": "dde6c77e-b07a-40c7-b56c-27e71199356b",
+        "outputId": "7c469db7-356b-4100-f2ff-ec6fc7d9b928",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "stream",
@@ -540,12 +540,12 @@
       ],
       "metadata": {
         "id": "vHKkpYtgIF_w",
-        "outputId": "604c78a1-5d25-430b-c7c7-4ea893e9a3d4",
+        "outputId": "2cbdde92-a963-4287-9c1e-3b0fb9e274d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,12 +573,12 @@
       ],
       "metadata": {
         "id": "nxVw-HsSrXEN",
-        "outputId": "9a68aff1-c800-41c1-e165-3d4637c8ebfe",
+        "outputId": "d68ae5d7-bcc6-4547-abcd-d950f4b9448b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "stream",
@@ -654,12 +654,12 @@
       ],
       "metadata": {
         "id": "MsazcHNhq1P9",
-        "outputId": "e928936f-669d-4986-bda6-1ec5d4db4f5d",
+        "outputId": "57831e7b-5d01-44e8-ffe8-a7a1782eaa6b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,12 +688,12 @@
       ],
       "metadata": {
         "id": "DPKvFW1_tCi6",
-        "outputId": "3ac6afa2-8b06-43e6-f01a-7abee096780e",
+        "outputId": "74cbd64f-c217-418b-a89a-8d5b0d19e21a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
@@ -803,9 +803,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pNhF4XYi1I7s",
-        "outputId": "bf3f9058-75b5-4cbd-85ee-c0f083887d33"
+        "outputId": "61c79fa1-6db2-4b57-ca20-6d8e95151e23"
       },
-      "execution_count": 16,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
@@ -850,9 +850,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JUvJTXSS13i8",
-        "outputId": "eb1d2ddd-3309-43f6-b88b-d033cda13dff"
+        "outputId": "a946e3a8-8ae9-4537-b573-5792fd37beb8"
       },
-      "execution_count": 17,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -860,6 +860,316 @@
           "text": [
             "Number of cells equal to zero in 'UPLOAD SPEED' column before removal: 5\n",
             "Number of cells equal to zero in 'UPLOAD SPEED' column after removal: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**THIS IS TO BE USED AFTER ALL OUTLIERS ARE REMOVED**"
+      ],
+      "metadata": {
+        "id": "vrBlDORz_Rbg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Deciding if mean or median should be used as the measure of central tendency for UPLOAD SPEED. Looking at the variability/skewness of the data"
+      ],
+      "metadata": {
+        "id": "SkWopZeW_mDo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Extract the UPLOAD SPEED column as a Series\n",
+        "upload_speed = df['UPLOAD SPEED']\n",
+        "\n",
+        "# Calculate the mean and median\n",
+        "mean = upload_speed.mean()\n",
+        "median = upload_speed.median()\n",
+        "\n",
+        "# Calculate other statistical measures\n",
+        "range_val = upload_speed.max() - upload_speed.min()\n",
+        "std_dev = upload_speed.std()\n",
+        "skewness = upload_speed.skew()\n",
+        "\n",
+        "\n",
+        "# Find the minimum and maximum values\n",
+        "min_upload_speed = upload_speed.min()\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"Min:\", min_upload_speed)\n",
+        "print(\"Mean:\", mean)\n",
+        "print(\"Median:\", median)\n",
+        "print(\"Range:\", range_val)\n",
+        "print(\"Standard Deviation:\", std_dev)\n",
+        "print(\"Skewness:\", skewness)"
+      ],
+      "metadata": {
+        "id": "_onZJ1af-dRF",
+        "outputId": "396356f7-b53f-402d-b3b9-bb8bf436f033",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Min: 0.01\n",
+            "Mean: 21.843857700650762\n",
+            "Median: 7.48\n",
+            "Range: 932.89\n",
+            "Standard Deviation: 53.06636448492144\n",
+            "Skewness: 7.373517725372531\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Determining central tendency for DOWNLOAD SPEED"
+      ],
+      "metadata": {
+        "id": "nhZraakq_yF-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Extract the DOWNLOAD SPEED column as a Series\n",
+        "download_speed = df['DOWNLOAD SPEED']\n",
+        "\n",
+        "# Calculate the mean and median\n",
+        "mean = download_speed.mean()\n",
+        "median = download_speed.median()\n",
+        "\n",
+        "# Calculate other statistical measures\n",
+        "range_val = download_speed.max() - download_speed.min()\n",
+        "std_dev = download_speed.std()\n",
+        "skewness = download_speed.skew()\n",
+        "\n",
+        "# Find the minimum and maximum values\n",
+        "min_download_speed = download_speed.min()\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"Min:\", min_download_speed)\n",
+        "print(\"Mean:\", mean)\n",
+        "print(\"Median:\", median)\n",
+        "print(\"Range:\", range_val)\n",
+        "print(\"Standard Deviation:\", std_dev)\n",
+        "print(\"Skewness:\", skewness)"
+      ],
+      "metadata": {
+        "id": "8PGkkQV2_57m",
+        "outputId": "065d0af4-9f27-489a-860b-58aaed399b7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Min: 0.01\n",
+            "Mean: 96.2448442516269\n",
+            "Median: 54.91\n",
+            "Range: 941.73\n",
+            "Standard Deviation: 113.69678103264611\n",
+            "Skewness: 2.1418906730337874\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Central tendency for JITTER"
+      ],
+      "metadata": {
+        "id": "0rEmemxqARXZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NlVo3kcADL0J"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Extract the JITTER column as a Series\n",
+        "jitter = df['JITTER']\n",
+        "\n",
+        "# Calculate the mean and median\n",
+        "mean = jitter.mean()\n",
+        "median = jitter.median()\n",
+        "\n",
+        "# Calculate other statistical measures\n",
+        "range_val = jitter.max() - jitter.min()\n",
+        "std_dev = jitter.std()\n",
+        "skewness = jitter.skew()\n",
+        "\n",
+        "# Find the minimum value\n",
+        "min_jitter = jitter.min()\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"Min:\", min_jitter)\n",
+        "print(\"Mean:\", mean)\n",
+        "print(\"Median:\", median)\n",
+        "print(\"Range:\", range_val)\n",
+        "print(\"Standard Deviation:\", std_dev)\n",
+        "print(\"Skewness:\", skewness)"
+      ],
+      "metadata": {
+        "id": "CXq5n0IbC5ua",
+        "outputId": "e9d1ffcf-02ce-4b82-ce11-69bca4640fd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Min: 0.01\n",
+            "Mean: 6.5266507592190885\n",
+            "Median: 2.02\n",
+            "Range: 1594.5\n",
+            "Standard Deviation: 30.544718722775347\n",
+            "Skewness: 29.579556175835133\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examing variabilty in LATENCY"
+      ],
+      "metadata": {
+        "id": "ZjKYUHx1A2b1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Extract the LATENCY column as a Series\n",
+        "latency = df['LATENCY']\n",
+        "\n",
+        "# Calculate the mean and median\n",
+        "mean = latency.mean()\n",
+        "median = latency.median()\n",
+        "\n",
+        "# Calculate other statistical measures\n",
+        "range_val = latency.max() - latency.min()\n",
+        "std_dev = latency.std()\n",
+        "skewness = latency.skew()\n",
+        "\n",
+        "# Find the minimum value\n",
+        "min_latency = latency.min()\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"Min:\", min_latency)\n",
+        "print(\"Mean:\", mean)\n",
+        "print(\"Median:\", median)\n",
+        "print(\"Range:\", range_val)\n",
+        "print(\"Standard Deviation:\", std_dev)\n",
+        "print(\"Skewness:\", skewness)"
+      ],
+      "metadata": {
+        "id": "FplQbD2GA7i4",
+        "outputId": "84dacffc-ba45-4b45-b309-93cbe0bbbb70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 141,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Min: 0.18\n",
+            "Mean: 420.680800867679\n",
+            "Median: 40.9\n",
+            "Range: 4294967.12\n",
+            "Standard Deviation: 40006.88115229682\n",
+            "Skewness: 107.3544362698866\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Checking PACKET LOSS variabilty"
+      ],
+      "metadata": {
+        "id": "hJiYek3hBLb0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Extract the PACKET LOSS column as a Series\n",
+        "packet_loss = df['PACKET LOSS']\n",
+        "\n",
+        "# Calculate the mean and median\n",
+        "mean = packet_loss.mean()\n",
+        "median = packet_loss.median()\n",
+        "\n",
+        "# Calculate other statistical measures\n",
+        "range_val = packet_loss.max() - packet_loss.min()\n",
+        "std_dev = packet_loss.std()\n",
+        "skewness = packet_loss.skew()\n",
+        "\n",
+        "# Find the minimum value\n",
+        "min_packet_loss = packet_loss.min()\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"Min:\", min_packet_loss)\n",
+        "print(\"Mean:\", mean)\n",
+        "print(\"Median:\", median)\n",
+        "print(\"Range:\", range_val)\n",
+        "print(\"Standard Deviation:\", std_dev)\n",
+        "print(\"Skewness:\", skewness)"
+      ],
+      "metadata": {
+        "id": "IhvMFB8cBPpS",
+        "outputId": "2bb6f4e0-2ea1-4bee-df0f-bd0641e003cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Min: 0.0\n",
+            "Mean: 2.004599566160521\n",
+            "Median: 0.05\n",
+            "Range: 47.85\n",
+            "Standard Deviation: 4.385871362082768\n",
+            "Skewness: 3.5002320451735187\n"
           ]
         }
       ]
